added content to html, css with some styling

--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Jasmin's HTML Basics</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    
-  </body>
+    <h1>HTML Basics</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" alt="HTML 5 Logo" img class="logo">
+    <ul>
+        <li>HTML stands for Hyper Text Markup Language</li>
+        <li>HTML describes the structure of a Web page</li>
+        <li>HTML elements tell the browser how to display the content</li>
+    </ul>
+    <section>
+        <p>HTML is very enjoyable, above is some unordered lists. Unordered lists are different to ordered lists as they have bullet points, rather than numbers.</p>
+    </section>
+    <ol>
+        <li>HTML is the standard markup language for creating Web pages</li>
+        <li>HTML consists of a series of elements</li>
+        <li>HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.</li>
+    </ol>
+    </body>
+    <section>
+        <p>As seen above, ordered lists list data in a numbered format starting with one.</p>
+    </section>
+    <p class="paragraph">All information on HTML has been sourced from <a href="https://www.w3schools.com/html/html_intro.asp">w3schools</a>.</p>
+    <table style="width: 50;">
+        <tr>
+            <th>Tag Name</th>
+            <th>Tag Description</th>
+        </tr>
+        <tr>
+            <td>tr tags</td>
+            <td>This initates the table row</td>
+        </tr>
+        <tr>
+            <td>th tags</td>
+            <td>These are table header tags. The top row of this table has this applied to make the text bolder.</td>
+        </tr>
+        <tr>
+            <td>td tags</td>
+            <td>Tag Data is what is used for any text like this.</td>
+        </tr>
+    </table>
 </html>
